--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -6,11 +6,11 @@
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'css/owl.theme.default.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/homepage.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/nav.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/login.css' %}" type="text/css">
-  <script src="{% static 'js/home.js'%}"></script>
 </head>
 
 <body>
@@ -23,13 +23,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item ">
-          <a class="nav-link" aria-current="page" data-bs-toggle="modal" data-bs-target="#exampleModal">LogIn</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="file:///C:/Users/prate/Desktop/homepage/login.html">SignUp</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" aria-current="page" href="#">Test</a>
+          <button class="nav-link btn btn-outline-secondary" aria-current="page" data-bs-toggle="modal" data-bs-target="#exampleModal">LogIn</button>
         </li>
       </ul>
     </div>
@@ -41,7 +35,7 @@
   <!-- Login Modal Box -->
   <!-- Trigger the modal with a button -->
 
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
 
@@ -63,12 +57,13 @@
                 </div>
               </div>
               <div class="form-inner">
-                <form action="#" class="login">
+                <form action="/login/" class="login" method="POST">
+                  {% csrf_token %}
                   <div class="field">
-                    <input type="text" placeholder="Email Address" required>
+                    <input type="email" placeholder="Email Address" name="email" required>
                   </div>
                   <div class="field">
-                    <input type="password" placeholder="Password" required>
+                    <input type="password" placeholder="Password" name="password" required>
                   </div>
                   <div class="pass-link">
                     <a href="#">Forgot password?</a>
@@ -81,15 +76,23 @@
                   <div class="signup-link">
                     Not a member? <a href="">Signup now</a></div>
                 </form>
-                <form action="#" class="signup">
+                <form action="/signup/" class="signup" method="POST">
+                  {% csrf_token %}
                   <div class="field">
-                    <input type="text" placeholder="Email Address" required>
+                    <!-- <label>Name:</label> -->
+                    <input type="text" placeholder="Name" name="name" required>
                   </div>
                   <div class="field">
-                    <input type="password" placeholder="Password" required>
+                    <!-- <label>Email:</label> -->
+                    <input type="text" placeholder="Email Address" name="email" required>
                   </div>
                   <div class="field">
-                    <input type="password" placeholder="Confirm password" required>
+                    <!-- <label>Password:</label> -->
+                    <input type="password" placeholder="Password" pattern=".{6,}" name="password" required>
+                  </div>
+                  <div class="field">
+                    <!-- <label>Confirm Password:</label> -->
+                    <input type="password" placeholder="Confirm password" name="password" required>
                   </div>
                   <div class="field btn">
                     <div class="btn-layer">
@@ -123,143 +126,74 @@
   </section>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f7dbcd" fill-opacity="1" d="M0,96L26.7,106.7C53.3,117,107,139,160,133.3C213.3,128,267,96,320,80C373.3,64,427,64,480,64C533.3,64,587,64,640,101.3C693.3,139,747,213,800,213.3C853.3,213,907,139,960,122.7C1013.3,107,1067,149,1120,138.7C1173.3,128,1227,64,1280,48C1333.3,32,1387,64,1413,80L1440,96L1440,0L1413.3,0C1386.7,0,1333,0,1280,0C1226.7,0,1173,0,1120,0C1066.7,0,1013,0,960,0C906.7,0,853,0,800,0C746.7,0,693,0,640,0C586.7,0,533,0,480,0C426.7,0,373,0,320,0C266.7,0,213,0,160,0C106.7,0,53,0,27,0L0,0Z"></path></svg>
 
-<section id="description">
-    <div class="row">
-      <div class="feature-box col-lg-4 pad-right">
-        <img src="{% static 'img/privacy.svg' %}" alt="Privacy Matters" class="privacyImage">
-        <h3 class="feature-box-heading">
-          <b>Private and Confidential</b>
-        </h3>
+<!-- <section id="description">
 
-
-      </div>
-
-      <div class="feature-box col-lg-4 pad-left">
-        <img src="{% static 'img/communitySupportIcon.svg' %}" alt="Privacy Matters" class="privacyImage hide-mobile">
-        <h3 class="feature-box-heading">
-          <b>Community Support</b>
-        </h3>
-        <img src="{% static 'img/communitySupportIcon.svg' %}" alt="Privacy Matters" class="privacyImage hide-lap">
-
-      </div>
-
-      <div class="feature-box col-lg-4 pad-right">
-        <img src="{% static 'img/anonymous.svg' %}" alt="Privacy Matters" class="privacyImage">
-        <h3 class="feature-box-heading">
-          <b>Anonymous Discussions</b>
-        </h3>
-
-      </div>
-    </div>
-
-
-</section>
+</section> -->
 
   <!-- *************************************************************************************** -->
   <!-- Overcome Your Problems Section -->
 
 <section id="service">
-
-  <!-- <div id="testimonial-carousel" class="carousel slide" data-ride="false" data-interval="2000">
-    <div class="carousel-inner">
-      <div class="carousel-item active" style="background-color: red;">
-          <h1>Hello</h1>
-      </div>
-      <div class="carousel-item" style="background-color: blue;">
-
-      </div>
-      <div class="carousel-item"style="background-color: green;">
-
-      </div>
-    </div>
-      <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-
-    </a>
-    <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-
-    </a>
-  </div> -->
-
-
-    <h2 class="serviceHeading">Overcome your problems</h2>
-
-    <div class="row ">
-
-      <div class="service-box col-lg-4 col-md-6" style=" border-radius: 25px;">
-        <div class="service-box-div">
-
-
-
-          <div class="service-box-left-div" style="width: 40%; float:left">
-            <img src="{% static 'img/depression2.png' %}" class="img-fluid" alt="Responsive image">
-
-          </div>
-
-          <div class="service-box-right-div" style="width:55%; float:right">
-            <h3 class="service-box-heading">
-              <bold>Depression</bold>
-            </h3>
-            <p class="service-box-content">Depression is a state of unhppiness for a long period of time.</p>
-          </div>
-          <br style="clear:both;" />
-        </div>
-
-
-      </div>
-
-      <div class="service-box col-lg-4 col-md-6">
-
-        <div class="service-box-div">
-
-
-          <div class="service-box-left-div" style="width: 40%; float:left">
-            <img src="{% static 'img/depression2.png' %}" class="img-fluid" alt="Responsive image">
-
-          </div>
-
-          <div class="service-box-right-div" style="width:55%; float:right">
-            <h3 class="service-box-heading">
-              <bold>Anxiety</bold>
-            </h3>
-            <p class="service-box-content">Depression is a state of unhppiness for a long period of time.</p>
-          </div>
-          <br style="clear:both;" />
-        </div>
-
-
-      </div>
-
-      <div class="service-box col-lg-4 col-md-6">
-
-        <div class="service-box-div">
-
-          <div class="service-box-left-div" style="width: 40%; float:left">
-            <img src="{% static 'img/depression2.png' %}" class="img-fluid" alt="Responsive image">
-
-          </div>
-
-          <div class="service-box-right-div" style="width:55%; float:right">
-            <h3 class="service-box-heading">
-              <bold>Stress</bold>
-            </h3>
-            <p class="service-box-content">Depression is a state of unhppiness for a long period of time.</p>
-          </div>
-
-          <br style="clear:both;" />
-        </div>
-      </div>
-
-
-    </div>
-
-
+    <h2 class="serviceHeading">We Help With</h2>
 </section>
+<div class="wrapperr">
+    <div class="tet-carousel section-pad owl-carousel">
+
+      <div class="single-testi">
+        <div class="image-area">
+          <img src="{% static 'img\test1.jpeg' %}" alt="">
+        </div>
+        <div class="img-text">
+          <h2>Depression</h2>
+          <hr>
+        </div>
+
+      </div>
+
+      <div class="single-testi">
+        <div class="image-area">
+        <img src="{% static 'img/type1.jpeg' %}" alt="" >
+        </div>
+        <div class="img-text">
+          <h2>Anxiety</h2>
+          <hr>
+        </div>
+
+      </div>
+      <div class="single-testi">
+        <div class="image-area">
+          <img src="{% static 'img/type2.jfif' %}" alt="">
+        </div>
+        <div class="img-text">
+          <h2>Paranoia</h2>
+
+          <hr>
+        </div>
+
+      </div>
+      <div class="single-testi">
+        <div class="image-area">
+        <img src="{% static 'img/type3.jfif' %}" alt="">
+        </div>
+        <div class="img-text">
+          <h2>Stress</h2>
+          <hr>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
 
   <!-- ******************************************************************************************** -->
 
   <!-- Connect Section -->
+
+
+
+
+
 
 <section id="connect">
 
@@ -330,6 +264,33 @@
 
     </div>
 
+    <div class="row">
+      <div class="feature-box col-lg-4 col-md-4 pad-left">
+        <img src="{% static 'img/privacy.svg' %}" alt="Privacy Matters" class="privacyImage">
+        <h3 class="feature-box-heading">
+          <b>Private and Confidential</b>
+        </h3>
+
+
+      </div>
+
+      <div class="feature-box col-lg-4 col-md-4 ">
+        <img src="{% static 'img/communitySupportIcon.svg' %}" alt="Privacy Matters" class="privacyImage">
+        <h3 class="feature-box-heading">
+          <b>Community Support</b>
+        </h3>
+
+      </div>
+
+      <div class="feature-box col-lg-4 col-md-4 pad-right">
+        <img src="{% static 'img/anonymous.svg' %}" alt="Privacy Matters" class="privacyImage">
+        <h3 class="feature-box-heading">
+          <b>Anonymous Discussions</b>
+        </h3>
+
+      </div>
+    </div>
+
 </section>
 
 
@@ -341,72 +302,47 @@
  <h1 id="selfTestHead">Discover Yourself</h1>
 
 
-  <div class="row ">
+  <div class="row">
 
     <div class="service-box col-lg-4 col-md-6">
-      <div class="service-box-div">
-
-
-
-        <div class="service-box-left-div" style="width: 40%; float:left">
-          <img src="{% static 'img/depression2.png' %}" class="img-fluid" alt="Responsive image">
-
-        </div>
-
-        <div class="service-box-right-div" style="width:55%; float:right">
+      <div class="service-box-div" >
+        <div class="service-box-right-div" >
           <h3 class="service-box-heading">
             <bold>Depression</bold>
           </h3>
           <p class="service-box-content">Depression is a state of unhppiness for a long period of time.</p>
+
         </div>
-        <button class="btn btn-lg btn-primary begin-button" type="button" name="button">Begin Test</button>
-        <br style="clear:both;" />
+        <button class="service-box-button btn btn-lg btn-primary" type="button" name="button">Begin Test</button>
+
       </div>
 
 
     </div>
 
-    <div class="service-box col-lg-4 col-md-6">
+    <div class="service-box col-lg-4 col-md-5 col-md-6">
       <div class="service-box-div">
-
-
-
-        <div class="service-box-left-div" style="width: 40%; float:left">
-          <img src="{% static 'img/depression2.png' %}" class="img-fluid" alt="Responsive image">
-
-        </div>
-
-        <div class="service-box-right-div" style="width:55%; float:right">
+        <div class="service-box-right-div">
           <h3 class="service-box-heading">
             <bold>Depression</bold>
           </h3>
           <p class="service-box-content">Depression is a state of unhppiness for a long period of time.</p>
         </div>
-        <button class="btn btn-lg btn-primary begin-button" type="button" name="button">Begin Test</button>
-        <br style="clear:both;" />
+        <button class="service-box-button btn btn-lg btn-primary" type="button" name="button">Begin Test</button>
       </div>
 
 
     </div>
 
-    <div class="service-box col-lg-4 col-md-6">
+    <div class="service-box col-lg-4  col-md-5 col-md-6">
       <div class="service-box-div">
-
-
-
-        <div class="service-box-left-div" style="width: 40%; float:left">
-          <img src="{% static 'img/depression2.png' %}" class="img-fluid" alt="Responsive image">
-
-        </div>
-
-        <div class="service-box-right-div" style="width:55%; float:right">
+        <div class="service-box-right-div" >
           <h3 class="service-box-heading">
             <bold>Depression</bold>
           </h3>
           <p class="service-box-content">Depression is a state of unhppiness for a long period of time.</p>
         </div>
-        <button class="btn btn-lg btn-primary begin-button" type="button" name="button">Begin Test</button>
-        <br style="clear:both;" />
+        <button class="service-box-button btn btn-lg btn-primary" type="button" name="button">Begin Test</button>
       </div>
 
 
@@ -418,28 +354,11 @@
 <!-- //////////////////////////////////////////////////////////////////////// -->
 
 
-
-  <script type="javascript" src="homepage.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="{% static 'js/owl.carousel.min.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-  <script>
-    const loginText = document.querySelector(".title-text .login");
-    const loginForm = document.querySelector("form.login");
-    const loginBtn = document.querySelector("label.login");
-    const signupBtn = document.querySelector("label.signup");
-    const signupLink = document.querySelector("form .signup-link a");
-    signupBtn.onclick = (() => {
-      loginForm.style.marginLeft = "-50%";
-      loginText.style.marginLeft = "-50%";
-    });
-    loginBtn.onclick = (() => {
-      loginForm.style.marginLeft = "0%";
-      loginText.style.marginLeft = "0%";
-    });
-    signupLink.onclick = (() => {
-      signupBtn.click();
-      return false;
-    });
-  </script>
+  <script src="{% static 'js/login.js' %}"></script>
+  <script src="{% static 'js/service.js' %}"></script>
 </body>
 
 </html>
