--- a/web_app/static/css/dashnav.css
+++ b/web_app/static/css/dashnav.css
@@ -43,7 +43,7 @@ em {
 .s-sidebar__trigger > i {
    display: inline-block;
    margin: 1.3em 0 0 1.3em;
-   color: #f07ab0;
+   color: white;
 }
 
 .anchor-dash {
@@ -80,7 +80,7 @@ em {
    overflow: hidden;
    transition: all .3s ease-in;
    width: 13em;
-   height: 100%;
+   height: 100vh;
    background: #a2d5c6;
    color: rgba(255, 255, 255, 0.7);
 }
